[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hisock"
dynamic = ["version"]
license = {file = "LICENSE"}
description = "A higher-level extension of the socket module, with simpler and more efficient usages"
readme = "README.md"
requires-python = ">=3.7"

authors = [
    {name = "Brandon", email = "bmcomis2018@gmail.com"},
    {name = "Sheepy"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["networking", "socket"]

dependencies = [
    "pycryptodome"
]

[project.urls]
Homepage = "https://github.com/SSS-Says-Snek/hisock"
Documentation = "https://hisock.readthedocs.io"
Issues = "https://github.com/SSS-Says-Snek/hisock/issues"

[tool.setuptools.dynamic]
version = {attr = "hisock.__version__"}

# [tool.setuptools.packages.find]
# include = [
#     "hisock",
#     "hisock.examples",
# ]