[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hisock"
dynamic = ["version"]
license = {file = "LICENSE"}
description = "A higher-level extension of the socket module, with simpler and more efficient usages"
readme = "README.md"
requires-python = ">=3.7"

authors = [
    {name = "Brandon", email = "bmcomis2018@gmail.com"},
    {name = "Sheepy"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["networking", "socket"]

dependencies = [
    "pycryptodome"
]

[project.urls]
Homepage = "https://github.com/SSS-Says-Snek/hisock"
Documentation = "https://hisock.readthedocs.io"
Issues = "https://github.com/SSS-Says-Snek/hisock/issues"

[tool.setuptools.dynamic]
version = {attr = "hisock.__version__"}

[tool.ruff]
line-length = 140

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

# [tool.setuptools.packages.find]
# include = [
#     "hisock",
#     "hisock.examples",
# ]
